added memberspace connection script, called get info function  and deployed logs to see outcomes

--- a/public/index.html
+++ b/public/index.html
@@ -204,8 +204,8 @@
   <script>
     var MemberSpace = window.MemberSpace ||
     {
-      "cookieDomain": "thetarotbridge.com",
-      "subdomain": "thetarotbridge"
+      "cookieDomain": "icodestaging.in",
+      "subdomain": "icodestaging"
     };
     (function (d) {
       var s = d.createElement("script");
@@ -213,7 +213,6 @@
       var e = d.getElementsByTagName("script")[0];
       e.parentNode.insertBefore(s, e);
     }(document));
-
   </script>
 </body>
 
