--- a/public/index.html
+++ b/public/index.html
@@ -201,19 +201,19 @@
          Check: /server/csp.js
     -->
 
-  <script>
-    var MemberSpace = window.MemberSpace ||
-    {
-      "cookieDomain": "icodestaging.in",
-      "subdomain": "icodestaging"
-    };
-    (function (d) {
-      var s = d.createElement("script");
-      s.src = "https://cdn.memberspace.com/scripts/widgets.js";
-      var e = d.getElementsByTagName("script")[0];
-      e.parentNode.insertBefore(s, e);
-    }(document));
-  </script>
+    <script>
+      var MemberSpace = window.MemberSpace ||
+      {
+        "cookieDomain": "taroauth.icodestaging.in",
+        "subdomain": "thetarobridge.icodestaging.in"
+      };
+      (function (d) {
+        var s = d.createElement("script");
+        s.src = "https://cdn.memberspace.com/scripts/widgets.js";
+        var e = d.getElementsByTagName("script")[0];
+        e.parentNode.insertBefore(s, e);
+      }(document));
+    </script>
 </body>
 
 </html>
