changed the cookie domain

--- a/public/index.html
+++ b/public/index.html
@@ -204,8 +204,8 @@
     <script>
       var MemberSpace = window.MemberSpace ||
       {
-        "cookieDomain": "taroauth.icodestaging.in",
-        "subdomain": "thetarobridge.icodestaging.in"
+        "cookieDomain": "taroauth",
+        "subdomain": "taroauth"
       };
       (function (d) {
         var s = d.createElement("script");
