--- a/public/index.html
+++ b/public/index.html
@@ -202,7 +202,7 @@
     -->
 
     <script>  var MemberSpace = window.MemberSpace || { "subdomain": "taroauth"}; (function (d) { var s = d.createElement("script"); s.src = "https://cdn.memberspace.com/scripts/widgets.js"; var e = d.getElementsByTagName("script")[0]; e.parentNode.insertBefore(s, e); }(document));
-    console.log(MemberSpace && MemberSpace?.getMemberInfo(), "initialized the memberspace object" )
+    console.log(MemberSpace , "initialized the memberspace object" )
     </script>
 
 </body>
