--- a/public/index.html
+++ b/public/index.html
@@ -201,8 +201,7 @@
          Check: /server/csp.js
     -->
 
-    <script>  var MemberSpace = window.MemberSpace || { "subdomain": "taroauth"}; (function (d) { var s = d.createElement("script"); s.src = "https://cdn.memberspace.com/scripts/widgets.js"; var e = d.getElementsByTagName("script")[0]; e.parentNode.insertBefore(s, e); }(document));
-    console.log(MemberSpace , "initialized the memberspace object" )
+    <script>  var MemberSpace = window.MemberSpace || { "subdomain": "taroauth", "cookieDomain":"taroauth.icodestaging.in",}; (function (d) { var s = d.createElement("script"); s.src = "https://cdn.memberspace.com/scripts/widgets.js"; var e = d.getElementsByTagName("script")[0]; e.parentNode.insertBefore(s, e); }(document));
     </script>
 
 </body>
